# cmake

test_1/: CMakeLists.txt
test_1/lib/: CMakeLists.txt  hello.c  hello.h
test_1/src/: CMakeLists.txt  hello.c
