CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
MESSAGE("设置安装的路径前缀")
SET(CMAKE_INSTALL_PREFIX /tmp/youku)
MESSAGE(${CMAKE_INSTALL_PREFIX})
SET(MY_NAME 456)
MESSAGE(${MY_NAME})
SET(LIBHELLO_SRC hello.c)
MESSAGE("生成动态连接库")
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
MESSAGE("设置目标属性")
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.0 SOVERSION 1)
INSTALL(TARGETS hello LIBRARY DESTINATION lib)
INSTALL(FILES hello.h DESTINATION include)
